# MainSequenceMarkets

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.agents/project_maintenance/public_api/: api_guidelines.md
.agents/prompts/: keep-docs-current.md
.agents/skills/instruments_and_pricing/: SKILL.md
.agents/skills/library_maintenance/: SKILL.md
.agents/skills/mainsequence/: PINNED_FROM.txt
.agents/skills/virtualfundbuilder/: SKILL.md
.claude/: settings.local.json
.github/workflows/: docs.yml  publish-to-pypi.yml
apps/v1/: __init__.py  dev_cors.py  main.py  runtime_bootstrap.py
apps/v1/routers/: accounts.py  asset_categories.py  assets.py  calendars.py  catalog.py  command_center.py  indices.py  portfolio_groups.py  portfolio_signals.py  portfolios.py  pricing_assets.py  pricing_curves.py  pricing_market_data.py  settings.py  virtual_funds.py
apps/v1/schemas/: accounts.py  asset_categories.py  assets.py  calendars.py  catalog.py  command_center.py  command_center_adapter.py  common.py  delete_impact.py  holdings.py  indices.py  portfolio_groups.py  portfolio_signals.py  portfolios.py  pricing_assets.py  settings.py  (+3 more)
docs/: concepts.md  getting-started.md  index.md
docs/ADR/: 0000-template.md  0001-project-scaffold.md  0002-import-package-name.md  0003-sdk-markets-migration.md  0004-vam-markets-ownership-transfer.md  0005-pricing-package-refactor.md  0006-asset-package-boundary.md  0007-market-data-node-asset-foreign-keys.md  0008-metatable-table-and-api-model-split.md  0009-lazy-metatable-runtime-resolution.md  0010-currency-asset-extension.md  0011-future-contracts-and-index-underlyings.md  0013-current-asset-pricing-details.md  0014-bond-asset-extension.md  0015-catalog-based-metatable-bootstrap.md  0016-pricing-market-data-configuration.md  0017-storage-first-data-node-architecture.md  0018-extension-model-catalog-bootstrap.md  0019-msm-portfolios-package-boundary.md  0020-sdk-managed-metatable-migrations.md  0021-virtual-fund-allocation-holdings-contract.md  0022-alembic-metatable-migration-alignment.md  0023-deterministic-alembic-naming.md  0024-namespace-scoped-alembic-version-locations.md  0025-direct-metatable-runtime-binding.md  0026-explicit-pricing-market-data-sets.md  0027-account-target-position-portfolio-exposure.md  0028-core-calendar-reference-data.md  0029-account-holdings-virtual-fund-allocation-policy.md  0030-explicit-portfolio-price-source-dependency.md  0031-generic-portfolio-valuation-source.md  0032-portfolio-group-many-to-many.md  0033-pricing-valuation-position-boundary.md  0034-command-center-asset-monitor-helpers.md  0035-pricing-curve-identity-and-market-data-curve-bindings.md  0036-prepared-pricing-valuation-context.md  0037-core-derived-index-definition-and-calculation-framework.md  0037-index-formula-and-custom-calculation-framework.md  0038-index-user-api-and-fastapi-exploration.md  0038-index-user-api-fastapi-exploration-and-safe-deletion.md  (+1 more)
docs/command_center/: asset_monitor.md  index.md
docs/knowledge/: index.md
docs/reference/: index.md  indices.md
docs/stylesheets/: custom.css
docs/tutorial/: 01-assets.md  02-calendars.md  03-accounts.md  04-portfolios.md  05-pricing.md  06-derived-indexes.md  06-index-formulas.md  index.md  market_workflows.md
examples/accounts/: account_workflow.py  create_and_insert_holdings.py
examples/api/: typed_metatable_rows.py
examples/assets/: asset_category_tutorial.ipynb  asset_category_workflow.py  asset_crud_workflow.py  asset_snapshot_workflow.py  asset_type_constants.py  assets_tutorial.ipynb  bond_workflow.py  currency_spot_workflow.py  openfigi_asset_rows.py  us_treasury_bond_workflow.py
examples/execution/: mock_trading.py
examples/meta_tables/: external_registered_registration.py  platform_managed_registration.py
examples/msm/: __init__.py
examples/msm_portfolios/: portfolio_custom_valuation_column_example.py  portfolio_equal_weights_config.py  portfolio_equal_weights_dynamic_migration.py  portfolio_equal_weights_example.py  portfolio_equal_weights_prepare_schema.py  portfolio_equal_weights_run.py  portfolio_groups_example.py  portfolio_read_services.py
examples/msm_pricing/: __init__.py  bond_terms.py  curve_reconstruction.py  curve_scenario.py  fixed_income_spread_analytics.py  instrument_identity_boundary.py  pricing_registry_rows.py  pricing_valuation_context.py  resolved_curve_scenario.py  valuation_inputs.py  valuation_scenario_workflow.py
examples/platform/: bootstrap.py  custom_asset_details_extension.py  inspect_markets_metatable_models.py  metatable_namespace.py
examples/portfolios/: portflio_equal_weights_example.py
examples/pricing/: import_pricing_runtime.py  pricing_registry_rows.py
examples/workflows/: account_fund_portfolio_data_nodes.py  asset_category_workflow.py  typed_metatable_rows.py
examplezs/assets/: openfigi_asset_rows.py
planning/: docs-fix-plan.md
refactor-result/: review.md
src/cli/: __init__.py  __main__.py  main.py
src/command_center/: __init__.py
src/migrations/: __init__.py  env.py  registry.py
src/msm/: __init__.py  asset_indexed_data_node.py  asset_scope.py  base.py  bootstrap.py  cli.py  constants.py  markets_data_node.py  meta_tables.py  schema_names.py  settings.py
src/msm_portfolios/: __init__.py  asset_scope.py  bootstrap.py  configuration.py  enums.py  utils.py
src/msm_pricing/: README.md  __init__.py  bootstrap.py  config.py  meta_tables.py  settings.py  valuation.py
tests/: test_api_assets.py  test_asset_master_lists.py  test_asset_snapshots.py  test_bootstrap.py  test_data_node_provisioning_boundary.py  test_import.py  test_metatable_models.py  test_portfolio_data_node_contracts.py  test_repositories.py
tests/msm/: __init__.py  test_cli.py  test_constants.py  test_schema_names.py
tests/msm_pricing/: __init__.py  test_bond_pricing_example.py  test_bootstrap.py  test_config.py  test_meta_tables.py  test_package_boundaries.py  test_valuation.py
(+702 files in other folders)
