[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ms-markets"
version = "0.0.6"
description = "Financial markets ORM, engines, and application management extensions for Main Sequence."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Main Sequence GmbH", email = "dev@main-sequence.io" },
]
keywords = [
  "financial-markets",
  "mainsequence",
  "orm",
  "portfolios",
  "pricing",
  "quantlib",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial",
  "Typing :: Typed",
]
dependencies = [
  "cachetools",
  "mainsequence",
  "numpy",
  "pandas",
  "pip>=26.1.1",
  "pydantic",
  "pytz",
  "requests",
  "SQLAlchemy",
]

[project.optional-dependencies]
dev = [
  "fastapi>=0.136.3",
  "mkdocs>=1.6",
  "mkdocs-autorefs>=1.2",
  "mkdocs-material>=9.5",
  "mkdocs-mermaid2-plugin>=1.1",
  "mkdocstrings[python]>=0.26",
  "pymdown-extensions>=10.0",
  "pytest>=8",
  "ruff>=0.5",
  "uvicorn>=0.48.0",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-autorefs>=1.2",
  "mkdocs-material>=9.5",
  "mkdocs-mermaid2-plugin>=1.1",
  "mkdocstrings[python]>=0.26",
  "pymdown-extensions>=10.0",
]
portfolios = [
  "docstring-parser",
  "joblib",
  "pandas-market-calendars",
  "scikit-learn",
  "tqdm",
]
public_api = [
  "fastapi>=0.136.3",
  "uvicorn>=0.48.0",
]
pricing = [
  "matplotlib",
  "QuantLib",
]
"pricing-streamlit" = [
  "matplotlib",
  "QuantLib",
  "streamlit",
  "streamlit-aggrid",
]

[project.urls]
Changelog = "https://github.com/mainsequence-projects/MainSequenceMarkets/blob/main/CHANGELOG.md"
Source = "https://github.com/mainsequence-projects/MainSequenceMarkets"
Homepage = "https://github.com/mainsequence-projects/MainSequenceMarkets"
Documentation = "https://mainsequence-projects.github.io/MainSequenceMarkets/"
Issues = "https://github.com/mainsequence-projects/MainSequenceMarkets/issues"

[project.scripts]
msm = "msm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/msm", "src/msm_pricing"]

[tool.hatch.build.targets.sdist]
include = [
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/docs",
  "/examples",
  "/mkdocs.yml",
  "/pyproject.toml",
  "/src",
  "/tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
